--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -4,10 +4,21 @@
 
 table{
     border-collapse: collapse;
-    width: 100%;
 }
 
 td, th{
     border: 1px solid;
     padding: 2px 5px;
+}
+
+.shopping{
+    width: 70%;
+}
+
+.item{
+    text-align: center;
+}
+
+tr:nth-child(even){
+    background-color: azure;
 }
