--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,14 +1,28 @@
 *{
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
     background-color: white;
-    padding: 8px;
+    margin: 0;
 }
 
 .navbar{
-    padding: 5px;
+    padding: 10px;
+}
+
+h1{
+    font-size: 30pt;
+}
+
+p, li{
+    font-size: 14pt;
+}
+
+header{
+    background-color: #b3d9ff;
+    background-image: linear-gradient(#99ccff, #cce6ff);
 }
 
 .navbar ul{
@@ -29,7 +43,11 @@ a{
 }
 
 section{
-    padding: 5px;
+    padding: 120px 5px 120px 5px;
+}
+
+.content{
+    margin: 30px;
 }
 
 .card{
@@ -37,7 +55,8 @@ section{
     transition: 0.3s;
     width: 33%;
     border-radius: 8px;
-    height: 350px;
+    background-color: #e6f2ff;
+    background-image: linear-gradient(#e6f2ff, #b3d9ff);
 }
 
 article .container{
@@ -51,7 +70,7 @@ article .container{
     justify-content: space-around;
 }
 
-.row>article, footer{
+.row>article{
     margin: 10px;
 }
 
@@ -59,12 +78,37 @@ article .container{
     margin: 2px;
 }
 
-.btn-reg{
-    display: flex;
-    justify-content: center;
+.card button{
+    border: none;
+    outline: 0;
+    padding: 10px;
+    text-align: center;
+    width: 50%;
+    font-size: 16pt;
+    background-color: #003566;
+    border-radius: 8px;
 }
 
 .text-center{
     text-align: center;
 }
 
+.item-center{
+    display: flex;
+    justify-content: center;
+    vertical-align: buttom;
+}
+
+footer{
+    background-color: #003566;
+    background-image: linear-gradient(#003566, black);
+    color: white;
+}
+
+footer a{
+    color: white;
+}
+
+button a{
+    color: white;
+}
