--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -14,7 +14,10 @@ section{
 
 header{
     padding: 15px 8px 10px 8px;
+    border-bottom: 1px dashed rgb(49, 146, 231);
+    margin: 10px;
 }
+
 .card{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 30%;
